--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.actions {
+  border: 1px solid black;
+  margin:auto;
+  display: flex;
+  flex-flow: row nowrap;
+  width: 80%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
