cleanup and formatting

--- a/src/Components/Action/Action.css
+++ b/src/Components/Action/Action.css
@@ -1,4 +1,8 @@
 .actions-container {
     border: 1px solid lightgray;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     width: 50%;
+    text-align: left;
 }
