--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
 .App {
   text-align: center;
 }
 
+.title {
+  margin-top: 30px;
+}
 .actions {
-  border: 1px solid black;
   margin:auto;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   width: 65%;
+}
+
+.dropdown-label {
+  font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  text-align: left;
+}
+
+.logo {
+  width: 300px;
+}
+
+.sub-title {
+  font-family: "Source Code Pro", Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem;
 }
