--- a/src/Components/Deployment/Deployment.css
+++ b/src/Components/Deployment/Deployment.css
@@ -1,7 +1,7 @@
 .deployment-container {
-    border: 1px solid lightgray;
-    padding-left: 10px;
-    padding-top: 10px;
+    /* border: 1px solid lightgray; */
+    /* padding-left: 10px; */
+    /* padding-top: 10px; */
     padding-bottom: 10px;
     width: 50%;
     text-align: left;
@@ -10,9 +10,9 @@
 .deployment-dropdown {
     color: rgb(90, 90, 90);
     font-family: 'Source Code Pro', monospace;
-    font-weight: bold;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    font-weight: regular;
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 5px;
     padding-right: 5px;
     outline: none;
@@ -22,5 +22,34 @@
 
 .deployment-options {
     font-family: 'Source Code Pro', monospace;
-    font-weight: bold;
+    font-weight: regular;
+}
+
+.namespace-label {
+    /* margin-top: 3px; */
+    margin-left: 4px;
+}
+
+.namespace-check {
+    margin-top: 3px;
+    padding-top: 10px;
+    font-family: 'Source Code Pro', monospace;
+    font-weight: regular;
+    font-size: .8rem;
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.namespace-input {
+    margin-top: 10px;
+}
+
+.namespace-input input {
+    border-radius: 2px;
+    color:rgb(90,90,90);
+    font-family: 'Source Code Pro', monospace;
+    font-weight: regular;
+    padding: 5px;
+    outline: none;
+    border: 1px solid lightgray;
 }
