--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .actions {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin:auto;
   display: flex;
   flex-flow: column nowrap;
