--- a/src/Components/Command/Command.css
+++ b/src/Components/Command/Command.css
@@ -1,17 +1,24 @@
 .command-container {
-    margin-top: 20px;
+    margin-top: 40px;
+}
+
+.command-input-container {
+    width: 100%;
 }
 
 .command {
     width: 65%;
+    height: 50px;
     margin: auto;
-    background-color: rgb(7, 149, 206);
+    background-color: #A112FF;
     color: white;
+    font-family: "Source Code Pro", monospace;
     font-weight: bold;
+    font-size: .8rem;
     padding-top: 10px;
-    padding-bottom:10px;
-    text-align:center;
-    border:none;
+    padding-bottom: 10px;
+    text-align: center;
+    border: none;
 }
 
 .command::placeholder {
@@ -31,8 +38,38 @@ input.command[type="text"]:focus {
 
 button.copy-button:disabled,
 button.copy-button[disabled] {
-    border: 1px solid #999999;
-    background-color: #cccccc;
-    color: #444444
+    border: 1px solid lightgray;
+    border-radius: 3px;
+    background-color: #ffffff;
+    color: lightgray;
+    width: 100px;
+    height: 40px;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+    font-weight: regular;
+    font-size: 1.0rem;
 }
 
+.btn-container {
+    width: 65%;
+    margin: auto;
+    margin-top: 10px;
+    text-align: right;
+}
+
+.copy-button {
+    border: 2px solid #A112FF;
+    border-radius: 3px;
+    background-color: #ffffff;
+    color: #A112FF;
+    width: 100px;
+    height: 40px;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 1.0rem;
+}
+
+.copy-button:hover {
+    background-color: #A112FF;
+    color: white;
+    cursor: pointer;
+}
