--- a/src/Components/Command/Command.css
+++ b/src/Components/Command/Command.css
@@ -19,12 +19,13 @@
     padding-bottom: 10px;
     text-align: center;
     border: none;
+    border-radius: 2px;
 }
 
 .command::placeholder {
     color: white;
     font-weight: bold;
-    background-color: rgb(7,149, 206);
+    background-color: #A112FF;
 }
 
 input.command[type="text"] {
@@ -52,7 +53,7 @@ button.copy-button[disabled] {
 .btn-container {
     width: 65%;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 15px;
     text-align: right;
 }
 
