--- a/src/Components/Deployment/Deployment.css
+++ b/src/Components/Deployment/Deployment.css
@@ -12,21 +12,25 @@
 
 .dropdown-menu {
     border: 1px solid lightgray;
+    border-radius: 2px;
     font-family: "Source Sans Pro", monospace;
     font-size: 1rem;
-    color: rgb(93, 93, 93);
+    color: rgb(47, 47, 47);
     outline: #00CBEC;
     padding: 5px;
+    width: 400px;
 }
 
 .text-input {
     border: 1px solid lightgray;
+    border-radius: 2px;
     font-family: "Source Code Pro", monospace;
     font-size: 1rem;
-    color: rgb(93, 93, 93);
+    color: rgb(47, 47, 47);
     outline: #00cbec;
     padding: 5px;
     margin-top: 3px;
+    width: 388px;
 }
 
 .namespace-check {
