--- a/src/Components/Deployment/Deployment.css
+++ b/src/Components/Deployment/Deployment.css
@@ -18,7 +18,8 @@
     color: rgb(47, 47, 47);
     outline: #00CBEC;
     padding: 5px;
-    width: 350px;
+    max-width: 350px;
+    min-width: fit-content;
 }
 
 .text-input {
@@ -30,7 +31,8 @@
     outline: #00cbec;
     padding: 5px;
     margin-top: 3px;
-    width: 338px;
+    max-width: 338px;
+    min-width: fit-content;
 }
 
 .namespace-check {
