adds carat divs

--- a/src/Components/Descriptions/Descriptions.css
+++ b/src/Components/Descriptions/Descriptions.css
@@ -29,9 +29,16 @@
     font-size: .7rem;
     cursor: pointer;
     transition: .2s;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
 }
 
 
 .info-key {
     font-weight: bold;
+}
+
+.rotated {
+    transform: rotate(-0.25);
 }
