--- a/src/Components/Descriptions/Descriptions.css
+++ b/src/Components/Descriptions/Descriptions.css
@@ -7,8 +7,9 @@
 
 .description {
     list-style: none;
-    margin-top: 8px;
-    margin-bottom: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 5px;
 }
 
 .row {
@@ -20,11 +21,22 @@
     justify-content: space-between;
     font-size: .8rem;
     cursor: default;
+    border-radius: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.row:hover {
+    background-color: rgb(241, 241, 241);
+}
+
+.row.expanded {
+    background-color: rgb(241,241,241);
 }
 
 .expand {
     border: none;
-    background-color: white;
+    background-color: transparent;
     font-family: "Source Code Pro", monospace;
     font-size: .7rem;
     cursor: pointer;
@@ -34,11 +46,14 @@
     align-items: center;
 }
 
-
 .info-key {
     font-weight: bold;
 }
 
 .rotated {
-    transform: rotate(-0.25);
+    transform: rotate(-90deg);
+}
+
+.command-info {
+    background-color: rgb(241,241,241);
 }
