--- a/src/Components/Descriptions/Descriptions.css
+++ b/src/Components/Descriptions/Descriptions.css
@@ -24,14 +24,15 @@
     border-radius: 2px;
     padding-left: 5px;
     padding-right: 5px;
+    max-width: 340px;
 }
 
 .row:hover {
-    background-color: rgb(241, 241, 241);
+    background-color: rgb(248, 248, 248);
 }
 
 .row.expanded {
-    background-color: rgb(241,241,241);
+    background-color: rgb(248,248,248);
 }
 
 .expand {
@@ -55,5 +56,8 @@
 }
 
 .command-info {
-    background-color: rgb(241,241,241);
+    background-color: rgb(248,248,248);
+    font-family: "Source Code Pro", Arial, Helvetica, sans-serif;
+    font-size: .7rem;
+    padding-bottom: 10px;
 }
