narrow the description field to match the function field in the description panel.

--- a/src/Components/Descriptions/Descriptions.css
+++ b/src/Components/Descriptions/Descriptions.css
@@ -60,4 +60,5 @@
     font-family: "Source Code Pro", Arial, Helvetica, sans-serif;
     font-size: .7rem;
     padding-bottom: 10px;
+    width: 350px;
 }
