--- a/src/Components/Command/Command.css
+++ b/src/Components/Command/Command.css
@@ -7,7 +7,8 @@
 }
 
 .command {
-    width: 65%;
+    word-wrap: normal;
+    width: 50%;
     height: 50px;
     margin: auto;
     background-color: #A112FF;
@@ -15,8 +16,8 @@
     font-family: "Source Code Pro", monospace;
     font-weight: bold;
     font-size: .8rem;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
+    white-space: normal;
     text-align: center;
     border: none;
     border-radius: 2px;
@@ -28,12 +29,12 @@
     background-color: #A112FF;
 }
 
-input.command[type="text"] {
+textarea.command[type="text"] {
     color: transparent;
     text-shadow: 0 0 0 #fff;
 }
 
-input.command[type="text"]:focus {
+textarea.command[type="text"]:focus {
     outline:none;
 }
 
@@ -51,7 +52,7 @@ button.copy-button[disabled] {
 }
 
 .btn-container {
-    width: 65%;
+    width: 50%;
     margin: auto;
     margin-top: 15px;
     text-align: right;
