--- a/src/Components/Descriptions/Descriptions.css
+++ b/src/Components/Descriptions/Descriptions.css
@@ -57,7 +57,7 @@
 
 .command-info {
     background-color: rgb(248,248,248);
-    font-family: "Source San Pro", Arial, Helvetica, sans-serif;
+    font-family: "Source Code Pro", Arial, Helvetica, sans-serif;
     font-size: .7rem;
     padding-bottom: 10px;
     width: 350px;
