--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,8 @@ body {
 code {
   font-family: 'Source Code Pro', sans-serif;
 }
+
+select, input[type="text"]{
+  width:100%;
+  box-sizing:border-box;
+}
