--- a/src/Components/Descriptions/Descriptions.css
+++ b/src/Components/Descriptions/Descriptions.css
@@ -2,7 +2,7 @@
     list-style: none;
     text-align: left;
     font-family: "Source Code Pro", monospace;
-    font-size: .7rem;
+    font-size: .9rem;
 }
 
 .description {
@@ -19,7 +19,7 @@
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
-    font-size: .8rem;
+    font-size: .9rem;
     cursor: default;
     border-radius: 2px;
     padding-left: 5px;
@@ -33,13 +33,14 @@
 
 .row.expanded {
     background-color: rgb(248,248,248);
+    font-weight: bold;
 }
 
 .expand {
     border: none;
     background-color: transparent;
     font-family: "Source Code Pro", monospace;
-    font-size: .7rem;
+    font-size: .9rem;
     cursor: pointer;
     transition: .2s;
     display: flex;
@@ -58,7 +59,7 @@
 .command-info {
     background-color: rgb(248,248,248);
     font-family: "Source Code Pro", Arial, Helvetica, sans-serif;
-    font-size: .7rem;
+    font-size: .9rem;
     padding-bottom: 10px;
     width: 350px;
 }
