--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 }
 
 .subtitle {
-  font-family: "Source Code Pro", monospace;
+  font-family: sfmono-regular, consolas, menlo, dejavu sans mono, monospace;
   font-weight: 400;
   font-size: 1rem;
   color: #6C757D;
@@ -51,7 +51,7 @@
 }
 
 .section {
-  font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+  font-family: sfmono-regular, consolas, menlo, dejavu sans mono, monospace;
   font-weight: 600;
   text-align: left;
 }
