--- a/src/Components/Descriptions/Descriptions.css
+++ b/src/Components/Descriptions/Descriptions.css
@@ -1,7 +1,7 @@
 .desc-list {
     list-style: none;
     text-align: left;
-    font-family: "Source Code Pro", monospace;
+    font-family: sfmono-regular, consolas, menlo, dejavu sans mono, monospace;
     font-size: .9rem;
 }
 
@@ -39,7 +39,7 @@
 .expand {
     border: none;
     background-color: transparent;
-    font-family: "Source Code Pro", monospace;
+    font-family: sfmono-regular, consolas, menlo, dejavu sans mono, monospace;
     font-size: .9rem;
     cursor: pointer;
     transition: .2s;
@@ -58,7 +58,7 @@
 
 .command-info {
     background-color: rgb(248,248,248);
-    font-family: "Source Code Pro", Arial, Helvetica, sans-serif;
+    font-family: sfmono-regular, consolas, menlo, dejavu sans mono, monospace;
     font-size: .9rem;
     padding-bottom: 10px;
     width: 350px;
