--- a/src/Components/UI/CopyBtn.css
+++ b/src/Components/UI/CopyBtn.css
@@ -1,44 +1,45 @@
-/* .generate-btn-container {
-    width: 91%;
-    text-align: left;
-} */
-
-button.generate-btn:disabled,
-button.generate-btn[disabled] {
+button.copy-button:disabled,
+button.copy-button[disabled] {
     border: 2px solid lightgray;
     border-radius: 3px;
     background-color: #ffffff;
     color: lightgray;
     width: fit-content;
-    padding-right: 22px;
-    padding-left: 22px;
     height: 40px;
     font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
-    font-weight: 600;
+    font-weight: regular;
     font-size: 1.0rem;
+    margin-right: 10px;
+    padding-right: 22px;
+    padding-left: 22px;
 }
 
-.generate-btn {
+/* .btn-container {
+    width: 65%;
+    margin: auto;
+    text-align: right;
+} */
+
+.copy-button {
     border: 2px solid #A112FF;
     border-radius: 3px;
     background-color: #ffffff;
     color: #A112FF;
     width: fit-content;
-    padding-right: 22px;
-    padding-left: 22px;
     height: 40px;
-    font-family: "Source Sans Pro",
-        Arial,
-        Helvetica,
-        sans-serif;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-weight: 600;
     font-size: 1.0rem;
+    margin-right: 10px;
+    padding-right: 22px;
+    padding-left: 22px;
 }
 
-.generate-btn:hover {
+.copy-button:hover {
     background-color: #A112FF;
     color: white;
     cursor: pointer;
+    margin-right: 10px;
     padding-right: 22px;
     padding-left: 22px;
 }
