--- a/src/Components/UI/GeneratedURI.css
+++ b/src/Components/UI/GeneratedURI.css
@@ -10,7 +10,7 @@
     border-radius: 2px;
     font-family: "Source Code Pro",
         monospace;
-    font-size: 1rem;
+    font-size: .8rem;
     color: rgb(47, 47, 47);
     outline: #00cbec;
     padding: 5px;
