--- a/src/Components/Command/Command.css
+++ b/src/Components/Command/Command.css
@@ -1,5 +1,8 @@
 .command-container {
     margin-top: 40px;
+    /* border: 1px solid black; */
+    width: 65%;
+    margin: auto;
 }
 
 .command-input-container {
@@ -7,7 +10,7 @@
 }
 
 .command {
-    width: 65%;
+    width: 100%;
     height: 50px;
     margin: auto;
     background-color: #A112FF;
@@ -38,8 +41,8 @@ input.command[type="text"]:focus {
 }
 
 .btns-container {
-    width: 65%;
-    margin: auto;
+    width: 100%;
+    /* margin: auto; */
     /* border: 1px solid black; */
     display: flex;
     flex-flow: row nowrap;
