--- a/src/Components/UI/GeneratedURI.css
+++ b/src/Components/UI/GeneratedURI.css
@@ -1,5 +1,7 @@
 .generated-uri-container {
     width: 65%;
+    max-width: 1010px;
+    padding-top: 25px;
     margin: auto;
     display: flex;
     flex-flow: column nowrap;
@@ -8,6 +10,7 @@
 
 .generated-uri {
     width: 100%;
+    max-width: 1000px;
     border: 1px solid lightgray;
     border-radius: 4px;
     font-family: "Source Code Pro",
@@ -18,6 +21,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 3px;
+    padding-left: 10px;
 }
 
 input.generated-uri[type="text"] {
