--- a/src/Components/Command/Command.css
+++ b/src/Components/Command/Command.css
@@ -12,10 +12,11 @@
     /* border: 1px solid black; */
 }
 
+/*TODO make it so text can wrap in the text area*/
 .command {
     width: 100%;
     max-width: 1000px;
-    height: 50px;
+    height: 100px;
     margin: auto;
     background-color: #A112FF;
     color: white;
