--- a/src/Components/Command/Command.css
+++ b/src/Components/Command/Command.css
@@ -1,6 +1,5 @@
 .command-container {
     margin-top: 40px;
-    /* border: 1px solid black; */
     width: 65%;
     margin: auto;
 }
@@ -9,7 +8,6 @@
     width: 100%;
     max-width: 1010px;
     margin: auto;
-    /* border: 1px solid black; */
 }
 
 /*TODO make it so text can wrap in the text area*/
@@ -22,7 +20,7 @@
     color: white;
     font-family: "Source Code Pro", monospace;
     font-weight: bold;
-    font-size: .8rem;
+    font-size: 1.2rem;
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
@@ -49,7 +47,6 @@ input.command[type="text"]:focus {
     width: 100%;
     max-width: 1000px;
     margin: auto;
-    /* border: 1px solid black; */
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-end;
