--- a/src/Components/Descriptions/Descriptions.css
+++ b/src/Components/Descriptions/Descriptions.css
@@ -5,6 +5,11 @@
     font-size: .7rem;
 }
 
+.desc-list.placeholder {
+    margin-left: 46px;
+    font-size: .8rem;
+}
+
 .description {
     list-style: none;
     padding-top: 8px;
@@ -32,7 +37,7 @@
 }
 
 .row.expanded {
-    background-color: rgb(248,248,248);
+    background-color: rgb(248, 248, 248);
 }
 
 .expand {
@@ -56,7 +61,7 @@
 }
 
 .command-info {
-    background-color: rgb(248,248,248);
+    background-color: rgb(248, 248, 248);
     font-family: "Source Code Pro", Arial, Helvetica, sans-serif;
     font-size: .7rem;
     padding-bottom: 10px;
