formatting, bug fixes.

--- a/src/Components/Command/Command.css
+++ b/src/Components/Command/Command.css
@@ -8,6 +8,7 @@
     width: 100%;
     max-width: 1010px;
     margin: auto;
+    margin-top: 40px;
 }
 
 /*TODO make it so text can wrap in the text area*/
