--- a/src/Components/Deployment/Deployment.css
+++ b/src/Components/Deployment/Deployment.css
@@ -22,15 +22,17 @@
 
 .text-input {
     border: 1px solid lightgray;
-    border-radius: 2px;
+    border-radius: 4px;
     font-family: "Source Code Pro", monospace;
     font-size: 1rem;
     color: rgb(47, 47, 47);
     outline: #00cbec;
     padding: 5px;
+    padding-left: 10px;
     margin-top: 3px;
-    max-width: 338px;
-    min-width: fit-content;
+    height: 25px;
+    max-width: 300px;
+    min-width: 200px;
 }
 
 .namespace-check {
