Replaces the Command component with the GeneratedCommand component. The main difference being that while the Command component uses the input element as it's base, the GeneratedCommand component simply uses a div. This made for easier resizing when the command grows or shrinks.

--- a/src/Components/Command/Command.css
+++ b/src/Components/Command/Command.css
@@ -1,3 +1,13 @@
+/* 
+    NOTE:
+
+    This is the css for the deprecated Command Component.
+    Please see note at the top of Command Component.
+    
+*/
+
+
+
 .command-container {
     margin-top: 40px;
     width: 65%;
