add rotation animation.

--- a/src/Components/Descriptions/Descriptions.css
+++ b/src/Components/Descriptions/Descriptions.css
@@ -58,6 +58,11 @@
 
 .rotated {
     transform: rotate(-90deg);
+    transition-duration: .2s;
+}
+
+.not-rotated {
+    transition-duration: .2s;
 }
 
 .command-info {
