--- a/src/Components/Command/GeneratedCommand.css
+++ b/src/Components/Command/GeneratedCommand.css
@@ -12,12 +12,11 @@
     font-family: "Source Code Pro", monospace;
     font-weight: normal;
     font-size: 1.2rem;
-    background-color: #ffffff;
+    background-color: var(--sg-black);
     padding-top: 25px;
     padding-bottom: 25px;
-    color: rgb(84, 84, 84);
-    border-radius: 3px;
-    border: 1px solid rgb(177, 177, 177);
+    color: var(--sg-mint);
+    border-radius: 6px;
 }
 
 .btns-container {
