--- a/src/Components/UI/GeneratedURI.css
+++ b/src/Components/UI/GeneratedURI.css
@@ -39,7 +39,7 @@ input.generated-uri[type="text"]:focus {
 }
 
 .copied-message {
-    color: #ff5543;
+    color: #ED2E20;
     font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 1.0;
     font-weight: light;
@@ -55,9 +55,9 @@ input.generated-uri[type="text"]:focus {
 
 button.copy-url:disabled,
 button.copy-url[disabled] {
-    border: 2px solid lightgray;
+    border: 2px solid #F4F7FB;
     border-radius: 3px;
-    background-color: #ffffff;
+    background-color: #F4F7FB;
     color: lightgray;
     width: fit-content;
     height: 40px;
@@ -71,10 +71,10 @@ button.copy-url[disabled] {
 }
 
 .copy-url {
-    border: 2px solid #A112FF;
+    border: 2px solid #5033e1;
     border-radius: 3px;
-    background-color: #ffffff;
-    color: #A112FF;
+    background-color: #5033e1;
+    color: #ffffff;
     width: fit-content;
     height: 40px;
     font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
@@ -84,12 +84,18 @@ button.copy-url[disabled] {
     padding-right: 22px;
     padding-left: 22px;
     justify-self: flex-end;
+    transition: all .2s ease-in;
 }
 
 .copy-url:hover {
-    background-color: #A112FF;
+    background-color: #3c26a5;
     color: white;
     cursor: pointer;
     padding-right: 22px;
     padding-left: 22px;
+}
+
+.copy-url:active {
+    background-color: #ffffff;
+    color: #5033e1;
 }
