--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --sg-blurple: #5033e1;
+  --sg-light-gray: #f4f7fb;
+  --sg-vermillion: #ff5543;
+  --sg-violet: #a112ff;
+  --sg-mint: #8fedcf;
+  --sg-black: #000000;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
