--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --sg-violet: #a112ff;
   --sg-mint: #8fedcf;
   --sg-black: #000000;
+  --sg-btn-hover: #3c26a5;
 }
 
 body {
@@ -19,4 +20,41 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.btn {
+  border: 2px solid #5033e1;
+  border-radius: 3px;
+  background-color: #5033e1;
+  color: #ffffff;
+  width: fit-content;
+  height: 40px;
+  font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 1.0rem;
+  margin-top: 10px;
+  padding-right: 22px;
+  padding-left: 22px;
+  justify-self: flex-end;
+  transition: all .2s ease-in;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: var(--sg-btn-hover);
+  color: white;
+}
+
+.btn:active {
+  background-color: #ffffff;
+  color: #5033e1;
+}
+
+button.btn:disabled,
+button.btn[disabled] {
+  border-color: var(--sg-light-gray);
+  background-color: var(--sg-light-gray);
+  color: lightgray;
+  font-weight: regular;
+  cursor: default;
 }
