--- a/src/App.css
+++ b/src/App.css
@@ -13,29 +13,39 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+  justify-content: center;
 }
 
-.actions {
+.deploy-container {
   display: flex;
   flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: flex-end;
   width: 45%;
-  min-width: 400px;
-  min-height: 360px;
+  min-width: 320px;
+  min-height: 450px;
+  max-height: 500px;
   margin-left: auto;
   margin-right: 0px;
+  /* border: 1px solid black; */
 }
 
 .line-break {
-  height: 275px;
-  min-height: 275px;
+  height: 400px;
+  min-height: 400px;
   border-left: 1px solid lightgray;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .descriptions-container {
   width: 50%;
-  max-width: 500px;
-  min-height: 360px;
-  min-width: 400px;
+  min-width: 320px;
+  /* max-width: 460px; */
+  min-height: 450px;
+  max-height: 500px;
+
+  /* border: 1px solid black; */
 }
 
 .logo {
@@ -55,10 +65,5 @@
 }
 
 .section.right {
-  padding-left: 44px;
-}
-
-.deploy-container {
-  width: 65%;
-  margin-left: auto;
+  text-align: right;
 }
