--- a/src/Components/Action/Action.css
+++ b/src/Components/Action/Action.css
@@ -1,10 +1,13 @@
 .actions-container {
     padding-top: 10px;
-    width: 50%;
-    max-width: 500px;
+    width: 100%;
+    max-width: 350px;
     text-align: left;
+    /* border: 1px solid black; */
 }
 
 .action-option {
     margin-top: 10px;
+    width: 100%;
+    /* border: 1px solid black; */
 }
