--- a/src/Components/Deployment/Deployment.css
+++ b/src/Components/Deployment/Deployment.css
@@ -1,7 +1,8 @@
 .deployment-container {
-    width: 50%;
+    width: 100%;
     text-align: left;
-    max-width: 500px;
+    max-width: 350px;
+    /* border: 1px solid black; */
 }
 
 .deployment-type {
@@ -10,13 +11,15 @@
 
 .dropdown-menu {
     border: 1px solid lightgray;
-    border-radius: 2px;
+    border-radius: 4px;
     font-family: "Source Sans Pro", monospace;
     font-size: 1rem;
     color: rgb(47, 47, 47);
     outline: #00CBEC;
     padding: 5px;
-    max-width: 350px;
+    height: 38px;
+    width: 100%;
+    max-width: 100%;
     min-width: fit-content;
 }
 
@@ -27,12 +30,13 @@
     font-size: 1rem;
     color: rgb(47, 47, 47);
     outline: #00cbec;
-    padding: 5px;
-    padding-left: 10px;
+    /* padding: 5px; */
+    padding-left: 8px;
     margin-top: 3px;
-    height: 25px;
-    max-width: 300px;
-    min-width: 200px;
+    height: 32px;
+    width: 97%;
+    /* max-width: 300px;
+    min-width: 200px; */
 }
 
 .namespace-check {
