--- a/src/Components/Action/Action.css
+++ b/src/Components/Action/Action.css
@@ -1,7 +1,8 @@
 .actions-container {
     padding-top: 10px;
     width: 100%;
-    max-width: 350px;
+    max-width: 325px;
+    min-width: 150px;
     text-align: left;
     /* border: 1px solid black; */
 }
