--- a/src/Components/Command/GeneratedCommand.css
+++ b/src/Components/Command/GeneratedCommand.css
@@ -1,11 +1,12 @@
 .generated-command-container {
     padding-top: 45px;
     height: fit-content;
-    width: fit-content;
+    width: 100%;
     min-height: 100px;
-    max-width: 1000px;
-    min-width: 1000px;
+    max-width: 800px;
+    min-width: 550px;
     margin: auto;
+    /* border: 1px solid black; */
 }
 
 .generated-command {
