--- a/src/Components/UI/GeneratedURI.css
+++ b/src/Components/UI/GeneratedURI.css
@@ -1,15 +1,18 @@
 .generated-uri-container {
     width: 65%;
-    max-width: 1010px;
+    max-width: 800px;
     padding-top: 25px;
     margin: auto;
     display: flex;
     flex-flow: column nowrap;
+    /* border: 1px solid black; */
 }
 
 .generated-uri {
     width: 100%;
+    border: 1px solid black;
     max-width: 1000px;
+    min-width: 790px;
     border: 1px solid lightgray;
     border-radius: 4px;
     font-family: "Source Code Pro",
@@ -20,7 +23,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 3px;
-    padding-left: 10px;
+    /* padding-left: 10px; */
 }
 
 input.generated-uri[type="text"] {
@@ -44,7 +47,6 @@ input.generated-uri[type="text"]:focus {
     font-size: 1.0;
     font-weight: light;
     opacity: 0;
-    width: 500px;
     text-align: left;
     transition-duration: .4s;
 }
