--- a/src/Components/Command/GeneratedCommand.css
+++ b/src/Components/Command/GeneratedCommand.css
@@ -22,10 +22,10 @@
 
 .btns-container {
     width: 100%;
-    max-width: 1000px;
+    max-width: 800px;
+    min-width: 550px;
     margin: auto;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-
 }
