--- a/src/Components/UI/GeneratedURI.css
+++ b/src/Components/UI/GeneratedURI.css
@@ -6,6 +6,7 @@
     margin: auto;
     display: flex;
     flex-flow: column nowrap;
+    justify-content: center;
     /* border: 1px solid black; */
 }
 
@@ -15,7 +16,7 @@
     max-width: 1000px;
     min-width: 790px;
     border: 1px solid lightgray;
-    border-radius: 4px;
+    border-radius: 3px;
     font-family: "Source Code Pro",
         monospace;
     font-size: 1rem;
@@ -38,6 +39,8 @@ input.generated-uri[type="text"]:focus {
 
 .copied-url-container {
     display: flex;
+    width: 100%;
+    /* border: 1px solid black; */
     flex-flow: row nowrap;
     justify-content: space-between;
 }
@@ -50,10 +53,20 @@ input.generated-uri[type="text"]:focus {
     opacity: 0;
     text-align: left;
     transition-duration: .4s;
+    /* border: 1px solid black; */
 }
 
 .copied-message.show {
     opacity: 1;
+}
+
+.btns-container-2 {
+    /* border: 1px solid black; */
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding-right: 5px;
 }
 
 button.btn.w-margin:disabled,
