--- a/src/Components/UI/GeneratedURI.css
+++ b/src/Components/UI/GeneratedURI.css
@@ -7,25 +7,24 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
-    /* border: 1px solid black; */
 }
 
 .generated-uri {
     width: 65%;
     border: 1px solid black;
     max-width: 1000px;
-    min-width: 790px;
+    min-width: 782px;
     border: 1px solid lightgray;
     border-radius: 3px;
     font-family: "Source Code Pro",
         monospace;
-    font-size: 1rem;
+    font-size: .9rem;
     color: rgb(70, 70, 70);
     outline: #00cbec;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 3px;
-    /* padding-left: 10px; */
+    padding-left: 10px;
 }
 
 input.generated-uri[type="text"] {
