--- a/src/Components/Command/GeneratedCommand.css
+++ b/src/Components/Command/GeneratedCommand.css
@@ -13,12 +13,12 @@
     font-family: "Source Code Pro", monospace;
     font-weight: normal;
     font-size: .9rem;
-    background-color: var(--sg-black);
+    background-color: var(--sg-bg-dark-3);
     padding-top: 25px;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 25px;
-    color: var(--sg-mint);
+    color: #ffffff;
     border-radius: 3px;
 }
 
