--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ code {
 }
 
 .btn {
-  border: 2px solid #5033e1;
+  border: none;
   border-radius: 3px;
   background-color: #5033e1;
   color: #ffffff;
@@ -35,7 +35,7 @@ code {
   min-width: fit-content;
   height: 40px;
   font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
-  font-weight: 600;
+  font-weight: normal;
   font-size: 1.0rem;
   margin-top: 10px;
   padding-right: 22px;
