--- a/src/Components/Deployment/Deployment.css
+++ b/src/Components/Deployment/Deployment.css
@@ -23,6 +23,23 @@
     min-width: fit-content;
 }
 
+.ns-check.dark {
+    background-color: var(--sg-bg-dark-3);
+    border: 1px solid var(--sg-dark-gray);
+    appearance: none;
+    width: 12px;
+    height: 12px;
+    border-radius: 2px;
+}
+
+.ns-check.dark:checked:after {
+    content: '\2713';
+    font-size: 14px;
+    color: white;
+    position: relative;
+    top: -2.5px;
+}
+
 .dropdown-menu.dark {
     background-color: var(--sg-bg-dark-2);
     border: 1px solid var(--sg-dark-gray);
